# mirante

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  NOTICE  caixa.lisp  clippy.toml  deny.toml  flake.nix
.github/workflows/: auto-release.yml  caixa-validate.yml  gen-spec.yml
mirante/: cli.rs  main.rs
mirante-common/: Cargo.toml  lib.rs  logging.rs  notifications.rs  tasks.rs  tracker.rs  utils.rs  utils.tests.rs
mirante-common/expr/: logical_expressions.rs  logical_expressions.tests.rs  mod.rs  selective_map.rs
mirante-config/: Cargo.toml  config.rs  history.rs  lib.rs  syntax.rs  utils.rs  watcher.rs
mirante-config/keys/: binding.rs  binding.tests.rs  combination.rs  combination.tests.rs  commands_macro.rs  mod.rs
mirante-config/themes/: colors.rs  mod.rs  theme.rs
mirante-kube/: Cargo.toml  client.rs  discovery.rs  lib.rs  status.rs  utils.rs
mirante-kube/core/: kind.rs  kind.tests.rs  mod.rs  namespace.rs  ports.rs  propagation_policy.rs  resource_ref.rs
mirante-kube/crds/: columns.rs  mod.rs  observer.rs
mirante-kube/stats/: metrics.rs  metrics.tests.rs  mod.rs  observer.rs
mirante-kube/watcher/: client.rs  list.rs  mod.rs  observer.rs  result.rs  state.rs  stream_backoff.rs  utils.rs  watch.rs
mirante-list/: Cargo.toml  item.rs  lib.rs  scrollable_list.rs  scrollable_list.tests.rs
mirante-list/filter/: filterable.rs  filterable_list.rs  filterable_list.tests.rs  mod.rs
mirante-tasks/: Cargo.toml  dir_lister.rs  forwarder.rs  highlighter.rs  lib.rs
mirante-tasks/commands/: delete_resources.rs  get_new_yaml.rs  get_yaml.rs  list_contexts.rs  list_resource_ports.rs  list_themes.rs  mod.rs  new_kubernetes_client.rs  save_configuration.rs  save_content.rs  set_new_yaml.rs  set_yaml.rs
mirante-tasks/tasks/: executor.rs  mod.rs  task.rs
mirante-tui/: Cargo.toml  lib.rs  response.rs  tui.rs  utils.rs
mirante-tui/table/: column.rs  column.tests.rs  header.rs  header.tests.rs  item.rs  mod.rs  tabular_list.rs
mirante-tui/widgets/: footer.rs  input.rs  list.rs  mod.rs  select.rs  spinner.rs  validator.rs
mirante-tui/widgets/actions/: action.rs  action.tests.rs  actions_list.rs  mod.rs
mirante-tui/widgets/history/: bottom_pane.rs  message.rs  messages_list.rs  mod.rs
mirante-tui/widgets/modal/: button.rs  checkbox.rs  controls_group.rs  dialog.rs  mod.rs  selector.rs
mirante/core/: app.rs  data.rs  mod.rs  worker.rs
mirante/core/managers/: client.rs  mod.rs  views.rs
mirante/kube/: mod.rs
mirante/kube/kinds/: kind.rs  kinds_list.rs  mod.rs
mirante/kube/resources/: mod.rs  observer.rs  resource.rs  resource.tests.rs  resource_data.rs  resources_list.rs
mirante/kube/resources/data/: api_service.rs  cluster_role.rs  condition.rs  config_map.rs  container.rs  crd.rs  cron_job.rs  custom_resource.rs  daemon_set.rs  default.rs  deployment.rs  endpoint_slice.rs  endpoints.rs  event.rs  ingress.rs  ingress_class.rs  job.rs  lease.rs  mod.rs  namespace.rs  network_policy.rs  node.rs  node_metrics.rs  persistent_volume.rs  persistent_volume_claim.rs  pod.rs  pod_metrics.rs  priority_class.rs  replica_set.rs  role.rs  role_binding.rs  secret.rs  service.rs  service_account.rs  stateful_set.rs  storage_class.rs
mirante/ui/: mod.rs
mirante/ui/presentation/: mod.rs  select.rs  utils.rs  utils.tests.rs
mirante/ui/presentation/content/: edit.rs  header.rs  mod.rs  search.rs  select.rs  styled_line.rs  styled_line.tests.rs  viewer.rs
mirante/ui/presentation/list/: header.rs  mod.rs  viewer.rs
mirante/ui/views/: mod.rs
mirante/ui/views/describe/: builder.rs  content.rs  mod.rs  utils.rs  view.rs
mirante/ui/views/describe/data/: cron_job.rs  daemon_set.rs  deployment.rs  job.rs  mod.rs  node.rs  persistent_volume.rs  persistent_volume_claim.rs  pod.rs  replica_set.rs  service.rs  stateful_set.rs
mirante/ui/views/forwards/: item.rs  list.rs  mod.rs  view.rs
mirante/ui/views/logs/: content.rs  content.tests.rs  line.rs  mod.rs  observer.rs  view.rs
mirante/ui/views/resources/: mod.rs  table.rs  view.rs
mirante/ui/views/shell/: bridge.rs  keys.rs  mod.rs  view.rs
mirante/ui/views/yaml/: content.rs  content.tests.rs  mod.rs  undo.rs  view.rs
mirante/ui/widgets/: command_palette.rs  mod.rs  side_select.rs
mirante/ui/widgets/pickers/: base.rs  file.rs  filter.rs  filter.tests.rs  mod.rs  namespace.rs  pattern.rs  patterns_list.rs  search.rs
mirante/ui/widgets/table/: basic.rs  cell.rs  mod.rs  row.rs
