[workspace]
resolver = "3"
members = [
    "mirante-common",
    "mirante-config",
    "mirante-kube",
    "mirante-list",
    "mirante-tasks",
    "mirante-tui",
]

[workspace.package]
version = "0.4.9"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/pleme-io/mirante"

# pleme-io pedantic clippy gate (substrate Conventions). The format!() ban is
# DECLARED in clippy.toml but NOT yet raised to deny here — 227 inherited call
# sites (see CLAUDE.md `pending-format-ban`); flip disallowed_macros to "deny"
# once the burndown reaches zero.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[workspace.dependencies]
mirante-common = { path = "mirante-common" }
mirante-config = { path = "mirante-config" }
mirante-kube = { path = "mirante-kube" }
mirante-list = { path = "mirante-list" }
mirante-tasks = { path = "mirante-tasks" }
mirante-tui = { path = "mirante-tui" }
ansi-to-tui = { version = "8.0" }
anyhow = { version = "1.0" }
arboard = { version = "3.6", default-features = false }
base64 = { version = "0.22" }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["event-stream"] }
delegate = { version = "0.13" }
futures = { version = "0.3" }
http = { version = "1" }
jsonpath-rust = { version = "1" }
k8s-openapi = { version = "0.27", features = ["latest"] }
kube = { version = "3.0", features = ["client", "derive", "runtime", "ws"] }
notify = { version = "8.0" }
pin-project = { version = "1.1" }
ratatui = { version = "0.30", features = ["serde"] }
ratatui-core = { version = "0.1", features = ["serde"] }
ratatui-widgets = { version = "0.3" }
ratatui-crossterm = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
sha1 = { version = "0.10" }
syntect = { version = "5.3" }
textwrap = { version = "0.16" }
thiserror = { version = "2.0" }
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "time", "io-util", "macros", "sync"] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "time", "env-filter"] }
tui-input = { version = "0.15" }
tui-term = { version = "0.3" }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "mirante"
path = "./mirante/main.rs"

[package]
name = "mirante"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
mirante-common = { workspace = true }
mirante-config = { workspace = true }
mirante-kube = { workspace = true }
mirante-list = { workspace = true }
mirante-tasks = { workspace = true }
mirante-tui = { workspace = true }
ansi-to-tui = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
delegate = { workspace = true }
futures = { workspace = true }
jsonpath-rust = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
ratatui = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tui-term = { workspace = true }

[dev-dependencies]
rstest = { version = "0.26" }

[build-dependencies]
syntect = { workspace = true }

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
lto = 'fat'       # Enable more aggressive link-time optimization
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Abort on panic
strip = 'symbols' # Strip debuginfo and symbols from binary
