[package]
name = "mirante-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
mirante-common = { workspace = true }
mirante-config = { workspace = true }
mirante-kube = { workspace = true }
mirante-list = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
delegate = { workspace = true }
ratatui-core = { workspace = true }
ratatui-widgets = { workspace = true }
ratatui-crossterm = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tui-input = { workspace = true }

[lints]
workspace = true
